--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <nav class="navbar fixed-top navbar-light bg-light">
+  <a class="navbar-brand" href="#">Fixed top</a>
+</nav>
     <meta charset="UTF-8" />
     <title>HTML, CSS and SASS Boilerplate</title>
     <meta
